tests/baselines/reference/typeFromPrototypeAssignment3.errors.txt
tests/cases/conformance/salsa/bug26885.js(2,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
tests/cases/conformance/salsa/bug26885.js(11,16): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
  No index signature with a parameter of type 'string' was found on type '{}'.


==== tests/cases/conformance/salsa/bug26885.js (2 errors) ====
    function Multimap3() {
        this._map = {};
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    };
    
    Multimap3.prototype = {
        /**
         * @param {string} key
         * @returns {number} the value ok
         */
        get(key) {
            return this._map[key + ''];
                   ~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{}'.
        }
    }
    
    /** @type {Multimap3} */
    const map = new Multimap3();
    const n = map.get('hi')